sets up project framework and screenshot system

--- a/src/client/manifest.json
+++ b/src/client/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "TypeScript React & Express Boilerplate",
-    "name": "TypeScript React & Express Boilerplate Created by Hazik Anwar",
+    "short_name": "Project Hub",
+    "name": "A Hub for all Projects",
     "icons": [
         {
             "src": "favicon.ico",
