--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,24 @@
 {
-  "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "es6"
-    ],
-    "allowJs": false,
-    "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "react",
-    "target": "es5",
-    "noImplicitAny": true,
-    "outDir": "build",
-    "rootDir": "src",
-    "sourceMap": true,
-    "baseUrl": ".",
-    "moduleResolution": "node",
-    "removeComments": true,
-    "esModuleInterop": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-  },
-  "include": [
-    "src"
-  ]
+    "compilerOptions": {
+        "lib": ["dom", "dom.iterable", "esnext"],
+
+        "allowJs": false,
+        "skipLibCheck": true,
+        "allowSyntheticDefaultImports": true,
+        "forceConsistentCasingInFileNames": true,
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "jsx": "react",
+        "target": "ES2017",
+        "noImplicitAny": true,
+        "outDir": "build",
+        "rootDir": "src",
+        "sourceMap": true,
+        "baseUrl": ".",
+        "moduleResolution": "node",
+        "removeComments": true,
+        "esModuleInterop": true,
+        "typeRoots": ["node_modules/@types"]
+    },
+    "include": ["src"]
 }
